# thefayettevillains

./: .gitignore  404.html  CLAUDE.md  CNAME  README.md  index.html  package-lock.json  package.json  theme.css  vite.config.ts
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  deploy.yml.old
assets/: index-B4LdAISG.js  index-BAtxb2nB.js  index-BFvHiWtQ.js  index-BO1Y4g36.js  index-BVukwdzl.js  index-BltBsf1C.css  index-BypNJXt9.css  index-C94aBwB4.css  index-CLlKDmct.css  index-CbnrvpT1.js  index-CrtL5qbP.js  index-DGEmJ_87.css  index-DPZRpTsF.js  index-DY7ijUq_.js  index-DZJgBQGo.js  index-gucZb9wr.js  index-pUfcXMZj.js
client/: .env.production  README.md  index.html  package-lock.json  package.json  vite.config.ts
client/public/: base.css
client/src/components/: App.css  App.tsx  AuthCallback.tsx  BookmarkedSales.tsx  Footer.tsx  LoginModal.css  LoginModal.tsx  PostCard.tsx  PostCarousel.tsx  Shared.css  TopBar.css  TopBar.tsx  WelcomeStatement.tsx  index.ts
client/src/components/icons/: index.tsx
client/src/contexts/: AuthContext.tsx
client/src/lib/: date-utils.ts
client/src/types/: Post.ts  rummage.ts
public/: theme.css
server/: .env.example  .env.production  .gitignore  README.md  pyproject.toml  requirements.txt
server/app/: __init__.py  columns.py  config.py  database.py  main.py
src/: App.tsx  main.tsx  theme.ts
src/components/: App.tsx  Footer.tsx  PostCard.css  PostCard.tsx  PostCarousel.css  PostCarousel.tsx  TopBar.tsx  WelcomeStatement.tsx  index.ts
src/data/: posts.ts
(+19 files in other folders)
